--- a/index.html
+++ b/index.html
@@ -1,2 +1,7 @@
+- தவறான பாலியல் வழக்குகள்
+- தவறான வரதட்சணை வழக்குகள்
+- தவறான குடும்ப வன்முறை வழக்குகள்
 
-Plase enter Click here
+498A, DV (Domestic Voilance) Act and the Maintainance Act.
+
+Plase enter <a href ="about">Click here</a>
