--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>{{site.short_name}}</title>
+		<title>{{ site.short_name }}</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<h1><a href="index.html">Spectral</a></h1>
+						<h1><a href="index.html">{{ site.short_name }}</a></h1>
 						<nav id="nav">
 							<ul>
 								<li class="special">
@@ -41,15 +41,20 @@
 				<!-- Banner -->
 					<section id="banner">
 						<div class="inner">
-							<h2>Spectral</h2>
-							<p>Another fine responsive<br />
-							site template freebie<br />
-							crafted by <a href="http://html5up.net">HTML5 UP</a>.</p>
+							<h2>498A</h2>
+							<p>
+பின்வருபவனவற்றுள் ஏதேனும் ஒரு கேள்விக்கு ஆம் என பதில் அளித்தால் உங்களுக்கானதுதான் இந்த இணையத் தளம்
+<br/>
+- Are you a person of Indian Origin? Did you get married in India?<br/>
+- Is your wife an Indian?<br/>
+- Do you have kids who will be getting married soon?<br/>
+- Do you have close relatives who have Indian wife?<br/>
+- Wife forcing you to live separately Wife does not respect you and is discourteous of your parents							.</p>
 							<ul class="actions special">
-								<li><a href="#" class="button primary">Activate</a></li>
+								<li><a href="#" class="button primary">பொய் வழக்குகளுக்கு எதிராக போராடுவோம்</a></li>
 							</ul>
 						</div>
-						<a href="#one" class="more scrolly">Learn More</a>
+						<a href="#one" class="more scrolly">உள்ளே நுழைக</a>
 					</section>
 
 				<!-- Footer -->
@@ -62,7 +67,7 @@
 							<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 						</ul>
 						<ul class="copyright">
-							<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li>(&copy; Free) An indian man</li><li>Design: <a href="dv498a">Laws of India</a></li>
 						</ul>
 					</footer>
 
