--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-	<head>
-		<title>{{ site.short_name }}</title>
+	<head>		
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		{% seo %}
 	</head>
 	<body class="landing is-preload">
 
@@ -43,15 +43,13 @@
 						<div class="inner">
 							<h2>498A</h2>
 							<p>
-பின்வருபவனவற்றுள் ஏதேனும் ஒரு கேள்விக்கு ஆம் என பதில் அளித்தால் உங்களுக்கானதுதான் இந்த இணையத் தளம்
-<br/>
 - Are you a person of Indian Origin? Did you get married in India?<br/>
 - Is your wife an Indian?<br/>
 - Do you have kids who will be getting married soon?<br/>
 - Do you have close relatives who have Indian wife?<br/>
 - Wife forcing you to live separately Wife does not respect you and is discourteous of your parents							.</p>
 							<ul class="actions special">
-								<li><a href="#" class="button primary">பொய் வழக்குகளுக்கு எதிராக போராடுவோம்</a></li>
+								<li><a href="#" class="button primary">ஆம் என பதில் அளித்தால்</a></li>
 							</ul>
 						</div>
 						<a href="#one" class="more scrolly">உள்ளே நுழைக</a>
