--- a/index.html
+++ b/index.html
@@ -5,14 +5,26 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-	<head>		
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-		{% seo %}
-	</head>
-	<body class="landing is-preload">
+
+<head>
+	<meta property="og:image" content="{{ site.baseurl }}/images/ttak-32.png"/>
+	<link rel="shortcut icon" type="image/png" href="{{ site.baseurl }}/images/ttak-32.png"/>
+
+	<!--[if lte IE 8]><link rel="stylesheet" href="{{ site.baseurl }}/assets/css/ie/v8.css" /><![endif]-->
+	{% seo %}	
+	<meta name="keywords" content="{{page.keywords}}">
+	<meta name="author" content="Pitchaimuthu">	
+	<link href="assets/Ruby_files/css" rel="stylesheet" type="text/css">	
+
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<link rel="stylesheet" href="assets/css/main.css" />
+	<noscript>
+		<link rel="stylesheet" href="assets/css/noscript.css" />
+	</noscript>
+
+</head>
+<body class="landing is-preload">
 
 		<!-- Page Wrapper -->
 			<div id="page-wrapper">
